plugins {
    id 'java-library'
}


group 'com.github'
version '1.3'

sourceCompatibility = 11
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.11'
    implementation("net.sf.opencsv:opencsv:2.3")
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
